<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@mipmap/ic_car"
        android:drawablePadding="5dp"
        android:drawableStart="@mipmap/ic_car"
        android:paddingTop="5dp"
        android:text="@string/vehicle_info_header"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/vehicle_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:digits="1234567890"
            android:hint="@string/vehicle_number_hint"
            android:inputType="phone" />

        <ImageButton
            android:id="@+id/search_vehicles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Search"
            android:src="@mipmap/ic_magnify" />

    </LinearLayout>

    <ListView
        android:id="@+id/vehicles"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </ListView>

</LinearLayout>